--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="group">
                     <p class="alternatives">Não é Gabriielatr9?</p>
                     <p class="alternatives">
-                        <span class="link-blue">Alternar contas</span>
+                        <a href="#" class="link-blue">Alternar contas</a>
                         ou
-                        <span class="link-blue">crie uma conta</span>
+                        <a href="#" class="link-blue">crie uma conta</a>
                     </p>
                 </div>
 
@@ -36,7 +36,7 @@
                     <div class="download">
                         <a href="#" class="app-download"></a>
                         <a href="#" class="app-download"></a>
-                </div>
+                    </div>
                 </div>
             </div>
         </div>
